# VibeCut

./: .env.example  Dockerfile  README.md  docker-compose.yml  folder_structure.py  hello.py  pyproject.toml  requirements.txt  setup.py  todo.txt
notebooks/: video_agent_testing.ipynb
src/: prompts.py
src/agent_graph/: graph.py  nodes.py  state.py
src/agents/: assembler.py  planner.py  retriever.py
src/config/: agents_config.yaml  confugration.py  logger.py  settings.py
src/integrations/: llm_client.py
src/interfaces/: streamlit_app.py
src/utils/: agent_schemas.py  llm.py  preset_configs.py  video_helpers.py
src/videodb/: __init__.py  base.py  indexing.py  search.py  videodb_client.py
