[project]
name = "video-editing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "directory-tree>=1.0.0",
    "langchain-core>=0.3.72",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "videodb>=0.2.16",
]
